# acgtk

./: .gitignore  AUTHORS  CHANGES  INSTALL  LICENSE.en  LICENSE.fr  Makefile  Makefile.in  README  TODO  config.status  configure  header
config/: Makefile  Makefile.in  ac_lib_checking.m4  configure.ac  ml_check.ml
data/new-syntax/ambiguity-examples/: abstract.sg  ambiguity-2.lx  ambiguity.lx  one-abstract.sg  sem_recipes.sg  semantics.sg  syntax.sg
data/new-syntax/morrill-examples/: Abstract_syntax.sg  Logic.sg  Sem_lex.lx
data/new-syntax/other-examples/: essai.sg
data/new-syntax/tag-examples/: url.lx
data/new-syntax/tests/: binder.test  out+in.test  outfix.text  semantics.test  sig1.sg
data/old-syntax/ambiguity-examples/: ambiguity.lx  bi-abstract.sg  initial_trees.sg  sem.lx  synt_lex.lx
data/old-syntax/morrill-examples/: Abstract.sg  Logic.sg  Sem_lex.lx  Synt_lex.lx  Vocabulary.sg
data/old-syntax/tag-examples/: abstract.sg  synt_lex.lx  trees.lx
emacs/: acg.el
examples/: MK-lecture-example.acg  README  anbncndn.acg  demo-script  montague-fr.acg  montague-script  montague.acg  strings.acg  tag-fr.acg  tag-script  tag.acg
opam-package/: opam  url
src/: Makefile  Makefile.common  Makefile.common.in  Makefile.in  Makefile.master  Makefile.master.in
src/acg-data/: Makefile  Makefile.in  acg_lexicon.ml  acg_lexicon.mli  acgc.ml  lexicon.ml  lexicon.mli  reduction.ml  reduction.mli  signature.ml  signature.mli  type_system.ml  type_system.mli  typing.ml
src/data/: CFG.acg  CFG2.acg  Jean-regarde-telescope.acg  anbncndn.acg  comp-script  comp.acg  conjunction-pierre-bourreau.acg  conjunction-script  conjunction.acg  cosubstitution-2-script  cosubstitution-2.acg  cosubstitution-script  cosubstitution.acg  cvg-quantification.acg  cvg-script  cvg-topic-script  cvg-topicalisation-in-situ.acg  cvg-topicalisation.acg  cvg.acg  cvg2-script  cvg2.acg  cvg3-script  cvg3.acg  drt2-script  drt2.acg  drt3-script  drt3.acg  drt4.acg  dstag-clausal-grammar-derived-trees.acg  dstag-clausal-grammar.acg  dstag-discourse-grammar.acg  dstag-linear-discourse-grammar.acg  dstag-sandro-discourse-derived-trees.acg  dstag-sandro-script  dstag-sandro-semantics.acg  dstag-sandro.acg  dstag-script  dstag-tag-discourse-script  dstag-tag-grammar-script  montague-drt.acg  (+11 more)
src/datalog/: Makefile.in  adornment2.ml  datalog_solver.ml  kan.pmcfg  kanazawa_transform.ml  lexicalizer.ml  magic_set_rewritting2.ml  oriented_pmcfg.ml  pmcfg.ml  pmcfg_syn.ml  pmcfg_to_datalog.ml  prefix_correct_program.ml  program.ml  program_printer.ml  signature.ml  test.ml
src/datalog.prover/: Makefile.in  datalog.ml  db_parser.mly  db_test.ml
src/datalog.solver/: Makefile.in
src/dypgen/: abs.ml  abstract_syntax.ml  error.ml  error.mli  lexer.mll  term_parser.dyp  term_parser.ml  term_parser.mli  test.ml
src/grammars/: Makefile  Makefile.in  abstract_syntax.ml  abstract_syntax.mli  acg_token.ml  acg_token.mli  data_lexer.mll  data_parser.dyp  data_parsing.ml  data_parsing.mli  entry.ml  entry.mli  environment.ml  environment.mli  error.ml  error.mli  example_sylvain.aut  interactive.ml  interactive.mli  interface.ml  interface.mli  interface.mli~  lexer.mll  lexicon_grammar.ml  parser.dyp  parser.mli  signature_grammar.ml  syntactic_data_structures.ml  syntactic_data_structures.mli  term_grammar.ml  term_grammar.mli  test.ml  token.ml  token.mli  typechecker.ml
src/grammars.old/: Makefile  Makefile.in  abstract_syntax.ml  abstract_syntax.mli  base_grammar.ml  base_grammar.mli  lexicon_grammar.ml  lexicon_grammar.mli  parser.ml  parser.mli  signature_grammar.ml  signature_grammar.mli  syntax.ml  term_grammar.ml  term_grammar.mli  test.ml
src/lambda/: Makefile  Makefile.in  display.ml  environment.ml  lambda.ml  lexicon.ml  printing.ml  sign.ml  sign.mli  signature.ml  signature.mli  test.ml  typechecker.ml  typing.ml  utilitaires.ml  utilitaires.mli
src/lambda.old/: Makefile.in  environment.ml  environment.mli  lambda.ml  lexicon.ml  loading  printing.ml  signature.ml  typing.ml
src/lambdas/: Makefile.in  signature.mli  test.ml  typechecker.ml
src/logic/: Makefile.in  abstract_syntax.ml  abstract_syntax.mli  lambda.ml  lambda.mli  reduction.ml  reduction.mli  typeInference.ml  typeInference.mli  typeInference_test.ml  type_inference.ml  type_inference.mli  type_inference_test.ml  type_inference_test.mli  varUnionFind.ml
src/reduction/: Makefile.in  reduction.ml  reduction.mli  reduction_functor.ml  reduction_functor.mli  reduction_test.ml
src/s_datalog/: Jean_idb.dl  Makefile.in  RSG.dl  TODO  arrayTraversal.ml  arrayTraversal.mli  bolt.config  datalog.ml  datalog.mli  datalog_AbstractSyntax.ml  datalog_AbstractSyntax.mli  db_lexer.mll  db_parser.mly  db_test.ml  persistentArray.ml  persistentArray.mli  rules.ml  rules.mli  test.ml  unify.ml  unify.mli  unify.mlt  unionFind.ml  unionFind.mli
src/scripting/: Makefile.in  acg.ml  diagram.ml  diagram.mli  functions.ml  functions.mli  script_lexer.mll  script_parser.dyp  scripting_errors.ml  scripting_errors.mli  show.ml  show.mli  show_colors_black_white.ml  show_colors_solarized_dark.ml  show_embellish_examples.ml  show_exts.ml  test.ml  tree.ml
src/utils/: Makefile  Makefile.in  alterTrees.ml  alterTrees.mli  dependencyManager.ml  dependencyManager.mli  idGenerator.ml  idGenerator.mli  sharedForest.ml  table.ml  table.mli  test_alterTrees.ml  test_dependencyManager.ml  test_sharedForest.ml  tries.ml  tries.mli  utils.ml  utils.mli  version.ml  version.mli
